[metadata]
name = stylized_text
version = 0.0.1
author = Kyleex
author_email = kyleex@skiff.com
description = to stylized terminal text
long_description = file: README.md
long_decription_content_type = text/markdown
url = https://github.com/kyleex/stylized_text
classifiers = 
    Programming Language :: Python :: 3
    Licence :: OSI Approved :: MIT Licence
    Operating Systeme :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True



