[metadata]
name = aesthetic_text
version = "0.1.0"
description = "to stylized terminal text"
author = Kyleex
author_email = antwill34@icloud.com
url = "https://github.com/kyleex/aesthetic_text"

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Licence :: OSI Approved :: MIT Licence
    Operating Systeme :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
long_description = file: README.md
long_decription_content_type = text/markdown



